--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -19,9 +19,24 @@
 - title: Experience
   type: time_table
   contents:
+    - title: Graduate Teaching Assistant
+      institution: MIT Electrical Engineering and Computer Science Dept.
+      year: Sept. 2023 - Present
+      description:
+        - Serving as a TA for the Advanced Undergraduate Subject Computer Graphics (6.4400).
+        - Conduct weekly office hours, address student queries on Piazza, and provide academic support.
+        - Compose and grade exam questions, as well as evaluate homework assignments.
+    - title: Data Science Intern
+      institution: Second Front Systems
+      year: July 2023 - Aug. 2023
+      description:
+        - Engineered Dash and Plotly dashboards with dynamic filtering and pagination for real-time data visualization.
+        - Implemented polynomial regression models for advanced trend analysis and future performance prediction.
+        - Developed a data export feature, enabling users to download filtered data as CSV files.
+        - Structured the Python codebase for modularity and Docker deployment.
     - title: Undergraduate Researcher - Computational Design and Fabrication Group
       institution: MIT Computer Science and Artificial Intelligence Laboratory
-      year: Feb. 2022 - Present
+      year: Feb. 2023 - Aug. 2023
       description:
         - Collaborating with a skilled team to develop a differentiable rigid body physics simulation for underwater gliders.
         - Adapting and enhancing Google's open-source Brax physics simulator to accommodate hydrodynamic forces for more accurate simulations.
